[gd_scene load_steps=7 format=3 uid="uid://7jw7rmuknies"]

[ext_resource type="Script" uid="uid://btucdwjhm0b7q" path="res://scripts/objects/salvage.gd" id="1_3dccb"]
[ext_resource type="Texture2D" uid="uid://bcmbvxht7a7an" path="res://assets/images/foot.png" id="2_8ebx5"]
[ext_resource type="Texture2D" uid="uid://bxsg5twm8rcft" path="res://assets/images/claw.png" id="3_xv8kw"]
[ext_resource type="Texture2D" uid="uid://cpvdalg6jokek" path="res://assets/images/core.png" id="4_n1byo"]
[ext_resource type="AudioStream" uid="uid://bg5ic8ywt4bi6" path="res://assets/sounds/pickup.ogg" id="5_xv8kw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_by2d8"]
radius = 41.2311

[node name="Salvage" type="Area2D"]
collision_layer = 32
collision_mask = 2
script = ExtResource("1_3dccb")
foot_texture = ExtResource("2_8ebx5")
claw_texture = ExtResource("3_xv8kw")
core_texture = ExtResource("4_n1byo")
pickup_sound = ExtResource("5_xv8kw")

[node name="SalvageSprite" type="Sprite2D" parent="."]

[node name="PickupShape" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_by2d8")

[node name="DespawnTimer" type="Timer" parent="."]

[node name="PickupSoundPlayer" type="AudioStreamPlayer2D" parent="."]
